# graveyard

./: .gitignore  Makefile  README.md  build  builder.py  graveyard.py  package-lock.json  pyproject.toml  requirements.txt  template.html  write_post  write_post.py
.github/workflows/: deploy-pages.yaml
assets/css/: style.css
pages/: index.html
posts/: 2025-03-31-initial-post.html  2025-04-13-rules.html  2025-05-26-mimosa.html  2025-07-03-new-things.html  2025-09-18-irrecoverable.html  2025-09-27-never-fine.html  2025-11-23-rss.html  2025-12-07-forgot.html  2025-12-18-stressed.html  2026-02-09-internet.html  2026-06-02-automation.html  2026-07-10-slow-down.html  2026-07-17-desire.html
templates/: main.html
